<resources>
    <string name="app_name">Galaxy Guesser\u00A0</string>

    <!-- MainActivity -->
    <string name="button_text_play">Play</string>
    <string name="button_text_play_ai">Play AI</string>
    <string name="button_text_how_to_play">How to play</string>
    <string name="button_text_settings">Settings</string>
    <string name="button_text_stats">Statistics</string>

    <!-- GameActivity -->
    <string name="button_text_next_round">Next Round</string>
    <string name="button_text_start_game">New Game</string>
    <string name="game_won_text">You won!</string>
    <string name="game_lost_text">You lost</string>
    <string name="reverse_game_won_text">Your code was found!</string>
    <string name="reverse_game_lost_text">Your code was not found</string>
    <string name="is_in_solution">is in the solution</string>
    <string name="is_not_in_solution">is not in the solution</string>

    <!-- How to play -->
    <string name="button_text_htp_back">back</string>
    <string name="button_text_htp_next">next</string>
    <string name="button_text_htp_finish">finish</string>
    <string name="htp_screen1">Welcome to Galaxy Guesser.\nThe main goal is to find out which planets are hidden behind the black holes before your rocket gets there.</string>
    <string name="htp_screen1.5">The possible planets are Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus and Neptune, like in our solar system.</string>
    <string name="htp_screen2">To make a guess tap a planet from the bottom of the screen to select it and then place it in the empty row next to your rocket. To remove a planet simply tap it again.</string>
    <string name="htp_screen3">When you finished the row hit "next round" to get two hints.\nThe black number tells you how many planets you guessed right. The red number tells you how many of those are also in the right place.</string>
    <string name="htp_screen4">You can use each row to make a guess and combine your hints to find the hidden planets.\nIf the game gets too easy for you, check out the settings for more options. Have fun!</string>

    <!-- SettingsActivity -->
    <string name="text_title_settings">Settings</string>
    <string name="game_settings_category">Game Settings</string>
    <string name="duplicate_pins_title">Use duplicate planets</string>
    <string name="duplicate_pins_text">Planets can occur multiple times in the solution.</string>
    <string name="empty_pins_title">Pluto Mode</string>
    <string name="empty_pins_text">Use Pluto as ninth planet.</string>
    <string name="round_number_text">Number of tries you got in the game. Smaller number of rows can also make planets appear bigger on wider screens.</string>
    <string name="experimental_settings_category">Experimental Settings</string>
    <string name="ai_mode_title">Activate AI game mode</string>
    <string name="ai_mode_text">Unlocks AI game mode in main menu (alpha).</string>

    <!-- StatsActivity -->
    <string name="text_title_stats">Statistics</string>
    <string name="stats_started_text">Games started:</string>
    <string name="stats_won_text">Games won:</string>
    <string name="stats_lost_text">Games lost:</string>
    <string name="stats_quit_text">Games not finished:</string>
    <string name="stats_avg_rounds_text">Average tries to win:</string>
    <string name="stats_shortest_time_text">Shortest game:</string>
    <string name="stats_longest_time_text">Longest game:</string>
    <string name="stats_avg_time_text">Average game time:</string>
    <string name="button_text_reset_stats">Reset statistics</string>
    <string name="alert_text_reset_stats">Do you really want to reset your statistics?</string>

    <!-- keys stats shared preference -->
    <string name="stats_preference_file_key" translatable="false">stats_file</string>
    <string name="stats_started_key" translatable="false">stats_started</string>
    <string name="stats_won_key" translatable="false">stats_won</string>
    <string name="stats_lost_key" translatable="false">stats_lost</string>
    <string name="stats_avg_rounds_key" translatable="false">stats_avg_rounds</string>
    <string name="stats_shortest_time_key" translatable="false">stats_shortest_time</string>
    <string name="stats_longest_time_key" translatable="false">stats_longest_time</string>
    <string name="stats_avg_time_key" translatable="false">stats_avg_time</string>

    <!-- allgemein -->
    <string name="text_alert_positive">Yes</string>
    <string name="text_alert_negative">No</string>
    <string name="text_alert_okay">Okay</string>
    <string name="alert_text_start_game">Do your really want to discard the current game and start a new one?</string>

    <!-- planets -->
    <string name="merkur">Mercury</string>
    <string name="venus">Venus</string>
    <string name="erde">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptun">Neptune</string>
    <string name="pluto">Pluto</string>
    <!-- generated -->


</resources>