<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HowToPlayActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_blank"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/htp_page_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1/4"
        android:textSize="@dimen/text_size_htp_pagenumber"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/htp_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@+id/htp_guideline_hor_62"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/htp_page_number"
        android:src="@drawable/htp_screen1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/htp_guideline_hor_62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/htp_guideline_hor_92"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/htp_guideline_hor_62">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/htp_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/htp_screen1"
                android:textSize="@dimen/text_size_htp_text"

                />
        </LinearLayout>
    </ScrollView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/htp_guideline_hor_92"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/htp_back_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_htp_back"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/htp_guideline_hor_92"
        app:strokeColor="@color/buttonborder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/htp_next_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_htp_next"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/htp_guideline_hor_92"
        app:strokeColor="@color/buttonborder" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"  />

</androidx.constraintlayout.widget.ConstraintLayout>